[package]
name = "async_buf_reader_utils"
version = "0.1.0"
authors = ["Michael Khirallah <mike.mkrallaproductions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.3.0"
futures = "0.3.1"
futures-core-preview="0.3.0-alpha.19"
once_cell = { version = "1.2.0" }
pin-project-lite = { version = "0.1.1" }
pin-utils = { version = "0.1.0-alpha.4" }
memchr = { version = "2", default-features = false }
