[package]
name = "async_buf_reader_utils"
version = "0.1.0"
authors = ["Michael Khirallah <mike.mkrallaproductions@gmail.com>"]
edition = "2018"

license = "Apache-2.0/MIT"
repository = "https://github.com/mkralla11/async_buf_reader_utils"
homepage = "https://github.com/mkralla11/async_buf_reader_utils"
description = "Adds additional functionality to the async-std crate for BufReader"
categories = ["asynchronous", "concurrency", "network-programming", "extensions"]
readme = "README.md"

[dependencies]
async-std = "1.3.0"
futures = "0.3.1"
futures-core-preview="0.3.0-alpha.19"
once_cell = { version = "1.2.0" }
pin-project-lite = { version = "0.1.1" }
pin-utils = { version = "0.1.0-alpha.4" }
memchr = { version = "2", default-features = false }
